# InterPython_Workshop_Example

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
